--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,11 @@ aspect-ratio: 143/72;
   flex-direction: column;
   align-items: center;
 }
-
+.form-content {
+    width: 909px;
+    height: 966px;
+    flex-shrink: 0;
+}
 header h1 {
   text-align: center;
   color: white;
@@ -124,9 +128,15 @@ header h1 {
 }
 
 .form h2 {
-  font-size: 22px;
+  /* font-size: 22px;
   margin-bottom: 20px;
-  color: #0b3d91;
+  color: #0b3d91; */
+  display: flex;
+width: 230px;
+height: 66.188px;   
+flex-direction: column;
+justify-content: center;
+flex-shrink: 0;
 }
 
 .card {
